# Yodecomp

./: .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN_COMPLETED.md  README.md  build_run.sh  build_run_android.sh  build_run_demo.sh  build_run_indy.sh  build_run_sdl.sh  build_run_sdl_indy.sh  canvas_init.s  run.sh  run_demo.sh  run_full.sh  run_indy.sh  run_sdl.sh  run_sdl_indy.sh  vcpkg.json
cmake/: Android.cmake  PortableSDL.cmake
cmake_modules/: toolchain-msvc42-wine.cmake
docs/: bytematch-candidate-401490.md  cmake-build.md  compile-units.md  compiler-hunt.md  current_attempt.diff  dedup-plan.md  dta-format.md  engine-bugs.md  g2-layout.md  game-logic.md  link-audit.md  phase-h2-full-game.md  phase-h3-indy.md  phase-h4-sdl.md  settings.md  sound.md  structs.md  target-401490.s  worldgen.md
microfx/harness/: dlg_smoke.cpp  game_walk.cpp  save_smoke.cpp  worldgen_smoke.cpp  yoda_main.cpp  zone_view.cpp
microfx/include/: afxcmn.h  afxcoll.h  afxdlgs.h  afxext.h  afxwin.h  mfxplat.h  microfx.h  mmsystem.h  windows.h
microfx/src/app/: mfxctl.cpp  mfxdlg.cpp  mfxmenu.cpp  mfxpump.cpp  mfxstubs.cpp  mfxwnd.cpp  mfxwnd.h
microfx/src/core/: mfxcore.cpp
microfx/src/gdi/: mfxfont_data.c  mfxgdi.cpp
microfx/src/platform/: mfxplat_null.cpp  mfxplat_sdl2.cpp  mfxplat_sdl3.cpp  mfxsnd_null.cpp  mfxsnd_sdl2mixer.cpp  mfxsnd_sdl3mixer.cpp  mfxsnd_sdl3stream.cpp  mfxsnd_webaudio.cpp
microfx/src/res/: mfxres.cpp
microfx/src/snd/: mfxsnd.cpp
microfx/web/: chooser.html  mfx_asset_picker.pre.js  mfx_shell.html
packaging/android/: build.gradle  gradle.properties  settings.gradle
packaging/android/app/: build.gradle  proguard-rules.pro
packaging/android/app/src/main/: AndroidManifest.xml
packaging/android/app/src/main/java/org/yodecomp/app/: GameActivity.java
packaging/android/app/src/main/res/values/: strings.xml
packaging/macos/: Info.plist.in
src/: Canvas.cpp  DebugLog.h  Deskcpp.cpp  DeskcppDoc.cpp  DeskcppDoc.h  DeskcppStub.h  DeskcppView.cpp  DeskcppView.h  GameObjectClasses.h  GameObjects.cpp  GameObjects.h  GameTypes.cpp  Iact.cpp  IactScript.cpp  IactScript.h  MainFrm.cpp  MainFrm.h  Score.cpp  TextDialog.cpp  Worldgen.cpp  Worldgen.h  WorldgenHelpers.cpp
src/App/: App.cpp  App.h
src/AppData/: AppData.cpp
src/Canvas/: Canvas.cpp  Canvas.h
src/Dlg/: Dlg.cpp  Dlg.h
src/Dta/: Dta.cpp  Dta.h
src/Frame/: Frame.cpp  Frame.h
src/GameData/: GameData.cpp  WorldStub.h  _perm_402670.cpp
src/GameView/: GameView.cpp  GameView.h
src/Iact/: Iact.cpp
src/IactScript/: IactScript.cpp  IactScriptClasses.h
src/Records/: RecordClasses.h  Records.cpp  Records.h  _perm_404c80.cpp
src/World/: World.cpp  World.h  _perm_401780.cpp
src/WorldDoc/: WorldDoc.cpp  WorldDoc.h
src/Worldgen/: MapZone.h  Worldgen.cpp  Worldgen.h  _perm_41c3b0.cpp
src/Zone/: Zone.cpp  Zone.h
src/ZoneObj/: ZoneObj.cpp  ZoneObj.h
toolchain/: README.md  vc42.cmake
toolchain/test/: app_funcs.txt  cu_calls.txt  cu_refs.txt  cu_refs2.txt  cu_strings.txt  func_401490.c  hello.c  orig_func_addrs.txt
toolchain/test/mfctest/: mfctest.cpp
toolchain/wavmix32/: README.md  wavmix32.def  wavmix32_stub.c
tools/: android_apk.sh  android_icons.py  asmscore.py  bin2c.py  bugscan.py  bytematch.py  deploy_wasm.sh  exactset.py  extract_res.py  fon2c.py  frontier.py  g2_diff.py  g2_link.sh  g2_order.py  image_diff.py  libfingerprint.py  link_exe.sh  make_icns.py  make_indy_res.py  make_macos_app.sh  make_res.py  match.py  msgcheck.py  permute.py  progress.py  reslib.py  segment_cus.py  survey.py  verify.py  vtcheck.py  wasm_boottest.js
tools/ghidra_scripts/: CreateGapFunctions.java  FillFunctionHoles.java  MergeEhFunclets.java  ParentGapFunclets.java
